# hoyolab-daily-bot

./: .gitignore  LICENSE  README.md  config.json  config.py  default.nix  flake.nix  main_windows.py  requirements.txt  run.bat  scheduler.py  setup.cfg
hoyolab-daily-bot/: scheduler.py
hoyolab_daily_bot/: claim.py  config.py  cookie.py  main.py  scheduler.py  tokencookie.py
