[metadata]
name = hoyolab-daily-bot
version = 1.0
author = AtaraxiaDev
description = Hoyolab Daily Check-in Bot
url = https://github.com/AtaraxiaSjel/hoyolab-daily-bot

[options]
python_requires = >=3.8, <4
install_requires = 
    requests>=2.28.1, <3.0.0
    browser_cookie3>=0.16.5, <1.0.0
    tzdata
    python-crontab>=2.7.1, <3.0.0

[options.entry_points]
hoyolab_daily_bot =
    mytest = hoyolab_daily_bot.main:main